crates/php-parser/tests/snapshots/integration__mixed_type.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php function anything(mixed $x): mixed { return $x; }
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "anything",
          "params": [
            {
              "name": "x",
              "type_hint": {
                "kind": {
                  "Named": {
                    "parts": [
                      "mixed"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 24,
                      "end": 29
                    }
                  }
                },
                "span": {
                  "start": 24,
                  "end": 29
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 24,
                "end": 32
              }
            }
          ],
          "body": [
            {
              "kind": {
                "Return": {
                  "kind": {
                    "Variable": "x"
                  },
                  "span": {
                    "start": 50,
                    "end": 52
                  }
                }
              },
              "span": {
                "start": 43,
                "end": 54
              }
            }
          ],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "mixed"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 35,
                  "end": 40
                }
              }
            },
            "span": {
              "start": 35,
              "end": 40
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 55
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 55
  }
}
