crates/php-parser/tests/snapshots/integration__multiple_catch_types.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "TryCatch": {
          "body": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "FunctionCall": {
                      "name": {
                        "kind": {
                          "Identifier": "foo"
                        },
                        "span": {
                          "start": 16,
                          "end": 19
                        }
                      },
                      "args": []
                    }
                  },
                  "span": {
                    "start": 16,
                    "end": 21
                  }
                }
              },
              "span": {
                "start": 16,
                "end": 23
              }
            }
          ],
          "catches": [
            {
              "types": [
                {
                  "parts": [
                    "TypeError"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 32,
                    "end": 42
                  }
                },
                {
                  "parts": [
                    "ValueError"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 44,
                    "end": 55
                  }
                },
                {
                  "parts": [
                    "RuntimeException"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 57,
                    "end": 74
                  }
                }
              ],
              "var": "e",
              "body": [
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "FunctionCall": {
                          "name": {
                            "kind": {
                              "Identifier": "handle"
                            },
                            "span": {
                              "start": 84,
                              "end": 90
                            }
                          },
                          "args": [
                            {
                              "name": null,
                              "value": {
                                "kind": {
                                  "Variable": "e"
                                },
                                "span": {
                                  "start": 91,
                                  "end": 93
                                }
                              },
                              "unpack": false,
                              "by_ref": false,
                              "span": {
                                "start": 91,
                                "end": 93
                              }
                            }
                          ]
                        }
                      },
                      "span": {
                        "start": 84,
                        "end": 94
                      }
                    }
                  },
                  "span": {
                    "start": 84,
                    "end": 96
                  }
                }
              ],
              "span": {
                "start": 31,
                "end": 98
              }
            },
            {
              "types": [
                {
                  "parts": [
                    "LogicException"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 105,
                    "end": 120
                  }
                }
              ],
              "var": "e",
              "body": [
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "FunctionCall": {
                          "name": {
                            "kind": {
                              "Identifier": "other"
                            },
                            "span": {
                              "start": 130,
                              "end": 135
                            }
                          },
                          "args": [
                            {
                              "name": null,
                              "value": {
                                "kind": {
                                  "Variable": "e"
                                },
                                "span": {
                                  "start": 136,
                                  "end": 138
                                }
                              },
                              "unpack": false,
                              "by_ref": false,
                              "span": {
                                "start": 136,
                                "end": 138
                              }
                            }
                          ]
                        }
                      },
                      "span": {
                        "start": 130,
                        "end": 139
                      }
                    }
                  },
                  "span": {
                    "start": 130,
                    "end": 141
                  }
                }
              ],
              "span": {
                "start": 104,
                "end": 143
              }
            }
          ],
          "finally": null
        }
      },
      "span": {
        "start": 6,
        "end": 143
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 143
  }
}
