crates/php-parser/tests/snapshots/integration__multiple_global_vars.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
function foo() {
    global $db, $config, $logger;
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "foo",
          "params": [],
          "body": [
            {
              "kind": {
                "Global": [
                  {
                    "kind": {
                      "Variable": "db"
                    },
                    "span": {
                      "start": 34,
                      "end": 37
                    }
                  },
                  {
                    "kind": {
                      "Variable": "config"
                    },
                    "span": {
                      "start": 39,
                      "end": 46
                    }
                  },
                  {
                    "kind": {
                      "Variable": "logger"
                    },
                    "span": {
                      "start": 48,
                      "end": 55
                    }
                  }
                ]
              },
              "span": {
                "start": 27,
                "end": 57
              }
            }
          ],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 58
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 58
  }
}
